--- a/css/board.css
+++ b/css/board.css
@@ -32,7 +32,10 @@
 }
 
 .board-vertical-position-display > div > span, .board-horizontal-position-display > div > span {
+    color: rgba(0, 0, 0, 0.73);
     text-align: center;
+    font-weight: 500;
+    font-size: 20px;
 }
 
 #board {
